--- a/com.stansassets.scene-management/Editor/StansAssets.SceneManagement.Editor.asmdef
+++ b/com.stansassets.scene-management/Editor/StansAssets.SceneManagement.Editor.asmdef
@@ -4,9 +4,9 @@
         "StansAssets.Foundation.Editor",
         "StansAssets.Foundation",
         "StansAssets.Plugins",
-        "StansAssets.Plugins.Editor"
+        "StansAssets.Plugins.Editor",
+        "StansAssets.SceneManagement"
     ],
-    "optionalUnityReferences": [],
     "includePlatforms": [
         "Editor"
     ],
@@ -15,5 +15,7 @@
     "overrideReferences": false,
     "precompiledReferences": [],
     "autoReferenced": false,
-    "defineConstraints": []
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
